tests/array/array_indexing_and_loans_errors.err.expected
error: at 40:5: [TC-ArrayIndexOutOfBounds] In function 'const_index_oob', block 'entry': Array index 3 out of bounds for [_; 3]
    |
 39 |     a = [1i64, 2i64, 3i64];
 40 |     r = &mut a[3i64];
    |     ^^^^^^^^^^^^^^^^
 41 |     return
    |
error: at 53:5: [TC-ArrayIndexOutOfBounds] In function 'zero_len_array_index_oob', block 'entry': Array index 0 out of bounds for [_; 0]
    |
 52 |   entry:
 53 |     r = &mut a[0i64];
    |     ^^^^^^^^^^^^^^^^
 54 |     return
    |
error: at 64:5: [TC-IndexOfNonArray] In function 'index_non_array', block 'entry': Cannot index non-array type i64
    |
 63 |   entry:
 64 |     y = copy x[0i64];
    |     ^^^^^^^^^^^^^^^^
 65 |     return
    |
error: at 79:5: [TC-ArrayIndexNotInteger] In function 'non_int_index', block 'entry': Array index must be an integer, got bool
    |
 78 |     b = true;
 79 |     x = copy a[copy b];
    |     ^^^^^^^^^^^^^^^^^^
 80 |     return
    |
